- fixed coreshot preview widgts crashs.
- fixed all stylsheet releated issues.
- fixed start speedial icon gape.
- fixed corefm opens two tab and added close button.
- corefm's drive size text not counting properly is fixed.
- fixed corefm's pathedit not showing compliter by moving to lineEdit widget.
- fixed appicon function in libcprime
- removed unused cpp file from corefm.






Version 2.2,Released date Thursday, July 26, 2018.

- added coreterminal to be independent.
- added corearchiver to archive file.
- fixed search ui.
- removed the icon path variable from saverecent function.
- fixed the pages and there numbering.
- updated the battery widget in dashboard and coreaction.
- added delete selected area in corepaint.
- added the opening terminal in current folder in corefm.
- added extra and compress with corearciver in corefm.
- mime list creation in qconcarent in settings.
- move cImage label to code in coreimage.
- image list in qconcarent in coreimage.
- fixed coreterminal crashes on closing.
- fixed the window size of coreterminal
- fixed coreterminal's type "man ls" shows this "terminal is not ready"
- fixed coreterminal background in black.
- add active window screenshot option corescreenshot.
- removed engrampa from dependencies.
- fixed paste icon in corfm.
- dark ui in corefm.
- fixed search result ui.
- fixed file trash problem in coreimage
- fixed after install corebox icon fixed.
- dark ui in corearchiver and added icon.
- dark ui in bookmarkit dialog.
- moved corearchiver ui in designer.
- globalfunction add a app icon get option.
- fixed getting filename at corearchiver.
- fixed zooming problem of coreimage.
- added backup option of coreapps & corebox settings and bookmark at settings.
- fixed bookmarking home folder problem at corefm.
- copy, paste shortcut at coreterminal.
- coreshot at new ui.
- added all the instruments icons.
- search ui has some changes.
- changed folder icon.
- reduced font size in all app's sidebar.